--- a/Prcatice.html
+++ b/Prcatice.html
@@ -11,9 +11,9 @@
       <h1>Temprature Conversion :</h1>
       <input type="number" id="textbox" value="0" /><br />
       <input type="radio" id="fahrenheit" name="unit" />
-      <label for="fahrenheit" class="temp">Celsius → Fahrenheit</label><br />
+      <label for="fahrenheit">Celsius → Fahrenheit</label><br />
       <input type="radio" id="Celsius" name="unit" />
-      <label for="fahrenheit" class="temp">Fahrenheit → Celsius</label><br />
+      <label for="fahrenheit">Fahrenheit → Celsius</label><br />
       <button type="button" onclick="convert()">Submit</button><br />
       <p id="result">Select a unit</p>
     </form>
